<?xml version="1.0"?>
<package format="2">
  <name>example_package_with_dynamic_reconfig</name>
  <version>0.0.1</version>
  <description>The example_package_with_dynamic_reconfig package</description>
  <maintainer email="keivan@email.com">keivan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
</package>
